[功能] 移除节点测试结果相关功能与接口，更新数据库版本至 4
