# server/docs/swagger.json
@@ -81,26 +81,6 @@
                 }
             }
         },
-        "/api/node-test-results": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "ProxyNode"
-                ],
-                "summary": "List recent test results for a proxy node",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    }
-                }
-            }
-        },
         "/api/option/": {
             "get": {
                 "produces": [
